--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^19.0.0",
     "react-color": "^2.19.3",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.1.0",
     "tiptap-extension-resize-image": "^1.2.1",
     "tw-animate-css": "^1.2.5",
