--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.12.12",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-menubar": "^1.1.6",
@@ -35,16 +36,20 @@
     "add": "^2.0.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "convex": "^1.22.0",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.486.0",
     "menubar": "^9.5.1",
     "next": "15.2.4",
+    "next-themes": "^0.4.6",
     "nuqs": "^2.4.1",
     "react": "^19.0.0",
     "react-color": "^2.19.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "shadcn": "^2.4.0-canary.17",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.1.0",
     "tiptap-extension-resize-image": "^1.2.1",
     "tw-animate-css": "^1.2.5",
